--- a/tox.ini
+++ b/tox.ini
@@ -29,6 +29,8 @@ deps=
     appdirs
     docutils
     cachy
+    icecream
+    loguru
     json-e
     orderedset
     pyyaml
@@ -41,3 +43,4 @@ commands=./doclint
 [flake8]
 max-line-length = 100
 import-order-style = pycharm
+application-import-names = ci_info, recipes
