--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ python = "^3.7"
 adr = "^0.15.2"
 loguru = "^0.2.5"
 icecream = "^1.5"
+tqdm = "^4.32"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.7.7"
