--- a/tox.ini
+++ b/tox.ini
@@ -32,10 +32,12 @@ deps=
     icecream
     loguru
     json-e
+    mozci
     orderedset
     pyyaml
     requests
     terminaltables
+    tqdm
     tomlkit
 passenv=PYTHONPATH
 commands=./doclint
