Add an argument to the push_data recipe to choose the type of runnable (label or group) to get data for

--- a/recipes/context.yml
+++ b/recipes/context.yml
@@ -34,3 +34,10 @@ to_date:
   default: 'eod'  # end of day
   type: validdatetime
   help: "Ending date to pull data from, defaults to end of day"
+
+runnable:
+  flags: ['--runnable']
+  default: 'label'
+  choices: ['label', 'group']
+  type: str
+  help: "type of runnable to get regressions fors"
